chore: update backend

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=5000
 APP_NAME=Invigilator Allocation System
 BASE_URL=http://localhost:5000
-APP_BASE_URL=http://localhost:5173
+APP_BASE_URL=https://ias-frontend-eight.vercel.app 
 
 # MongoDB
 MONGO_URI=mongodb+srv://harshi9392:harshi9392vu@cluster0.73zxmes.mongodb.net/invigilatorDB?retryWrites=true&w=majority&appName=Cluster0
